syntax  = "proto3";

package infrastructure;

import "google/protobuf/timestamp.proto";

service CidaInfrastructureService {
	rpc RetrieveModules (RetrieveModulesRequest) returns (RetrieveModulesResponse);
	rpc Synchronize (SynchronizeRequest) returns (SynchronizeResponse);
	rpc Version (VersionRequest) returns (VersionResponse);
}

message RetrieveModulesRequest {
	repeated string modules = 1;
}

message RetrieveModulesResponse {
	repeated bytes modules = 1;
}

message SynchronizeResponse {
	message ExternalServerConnection {
		string host = 1;
		int32 port = 2;
		string username = 3;
		string password = 4;
	}
	google.protobuf.Timestamp timestamp = 1;
	repeated string modules = 2;
	ExternalServerConnection Ftp = 3;
}

message SynchronizeRequest {
	message Endpoint {
		string host = 1;
		int32 port = 2;
	}
	
	Endpoint PublicEndpoint = 1;
}

message VersionRequest {
}

message VersionResponse {
	int32 Version = 1;
}